fix: Fixed sidebar and MCWorld